src/modules/companies/components/CompanySearchNav/CompanySearchNav.module.scss
@import '/src/styles/variable-overrides.scss';

.searchNav {
  position: fixed;
  height: calc(100vh - $navbar-height - $company-search-header-height);
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  min-height: 600px;
}

.ul {
  list-style-type: none;
  padding-left: 0px;
  text-align: center;
}

